--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -123,6 +123,10 @@ red {
     height: 50px;
 }
 
+.hor_spacer {
+    width: 40px;;
+}
+
 
 
 /*Photos*/
@@ -187,10 +191,10 @@ red {
 
 /*Music*/
 .music-section {
-    padding: 2rem;
-    border-radius: 0.5rem;
+    padding: 4rem;
+    border-radius: 1.5rem;
     margin-bottom: 2rem;
-    background-color: #f7fafc;
+    background-color: lavenderblush;
 }
 
 .music-header {
@@ -232,9 +236,9 @@ red {
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center items horizontally */
     margin-bottom: 1rem;
-    padding: 1rem;
+    padding: .5rem;
     background-color: #fff;
-    border-radius: 0.375rem;
+    border-radius: 1rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     width: 250px; /* Give each song item a fixed width */
     text-align: center;
@@ -249,7 +253,7 @@ red {
     height: 150px;
     border-radius: 0.25rem;
     object-fit: cover;
-    margin-bottom: 1rem;
+    margin-bottom: .1rem;
     background-color: #f0f0f0;
 }
 
@@ -259,15 +263,18 @@ red {
 }
 
 .song-title {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 500;
     color: #1a202c;
-    margin-bottom: 0.25rem;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
 }
 
 .song-artist {
     font-size: 0.875rem;
     color: #718096;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
 }
 
 .play-button {
